@@ -1,20 +1,8 @@
-FROM adoptopenjdk/openjdk11:alpine-slim as build
-WORKDIR /app
+FROM maven:3.8-jdk-8 as builder
+COPY . /usr/src/easybuggy/
+WORKDIR /usr/src/easybuggy/
+RUN mvn -B package
 
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
-COPY src src
-
-RUN ./mvnw package
-COPY target/*.jar app.jar
-
-FROM adoptopenjdk/openjdk11:alpine-slim
-VOLUME /tmp
-RUN addgroup --system javauser && adduser -S -s /bin/false -G javauser javauser
-WORKDIR /app
-COPY --from=build --chown=javauser:javauser /app/app.jar .
-COPY --from=build --chown=javauser:javauser /app/.mvn ./.mvn
-RUN chown -R javauser:javauser /app
-USER javauser
-ENTRYPOINT ["java","-jar","app.jar"]
+FROM openjdk:8-slim
+COPY --from=builder /usr/src/easybuggy/target/easybuggy.jar /
+CMD ["java", "-XX:MaxMetaspaceSize=128m", "-Xloggc:logs/gc_%p_%t.log", "-Xmx256m", "-XX:MaxDirectMemorySize=90m", "-XX:+UseSerialGC", "-XX:+PrintHeapAtGC", "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-XX:+UseGCLogFileRotation", "-XX:NumberOfGCLogFiles=5", "-XX:GCLogFileSize=10M", "-XX:GCTimeLimit=15", "-XX:GCHeapFreeLimit=50", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=logs/", "-XX:ErrorFile=logs/hs_err_pid%p.log", "-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n", "-Dderby.stream.error.file=logs/derby.log", "-Dderby.infolog.append=true", "-Dderby.language.logStatementText=true", "-Dderby.locks.deadlockTrace=true", "-Dderby.locks.monitor=true", "-Dderby.storage.rowLocking=true", "-Dcom.sun.management.jmxremote", "-Dcom.sun.management.jmxremote.port=7900", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-ea", "-jar", "easybuggy.jar"]
